--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,9 @@ import ExperienceSection from '../components/sections/ExperienceSection.astro';
 import ProjectsSection from '../components/sections/ProjectsSection.astro';
 import ContactSection from '../components/sections/ContactSection.astro';
 import { siteConfig } from '../config/site';
+
+// Import styles and scripts
+import '../styles/landing.css';
 ---
 
 <Layout title={siteConfig.title}>
@@ -23,10 +26,4 @@ import { siteConfig } from '../config/site';
 	<ContactSection />
 </Layout>
 
-<link rel="stylesheet" href="/src/styles/landing.css">
-
-<style is:global>
-/* Estilos adicionales específicos de esta página pueden ir aquí */
-</style>
-
-<script src="/src/scripts/landing-animations.js"></script>
+<script src="../scripts/landing-animations.js"></script>
